--- a/style.css
+++ b/style.css
@@ -5,11 +5,20 @@
 table .avatar {
     border-radius: 60px;
 }
-.overview {
+.overview, .footer {
     display: flex;
     margin: 24px;
     justify-content: center;
 }
 .overview td {
     padding-left: 24px;
+}
+.profile {
+    margin: 24px;
+}
+.profile table {
+    width: 100%;
+}
+.profile table td {
+    padding: 4px;
 }
