--- a/TH3/Login/style.css
+++ b/TH3/Login/style.css
@@ -14,7 +14,6 @@ th {
     margin: 0 auto;
     border: 1px solid;
     width: 300px;
-    margin-top: 50px;
 }
 .error {
     font-size: 14px;
@@ -22,4 +21,11 @@ th {
     font-style: italic;
     margin: 2px;
     height: 18px;
+}
+.thanhcong {
+    font-size: 24px;
+    color: green;
+    font-style: italic;
+    height: 18px;
+    text-align: center;
 }
