--- a/TH3/Login/style.css
+++ b/TH3/Login/style.css
@@ -12,7 +12,7 @@ th {
     border: 1px solid;
     width: 300px;
 }
-.error {
+#error {
     font-size: 14px;
     color: red;
     font-style: italic;
