--- a/grocery-shoppy/css/style.css
+++ b/grocery-shoppy/css/style.css
@@ -2485,12 +2485,17 @@ td.invert-image a img {
     position: relative;
 }
 .icon-close {
+    color: #e74c3c;
     cursor: pointer;
-    font-size: 32px;
+    font-size: 24px;
     -webkit-transition: color 0.2s ease-in-out;
     -moz-transition: color 0.2s ease-in-out;
     -o-transition: color 0.2s ease-in-out;
     transition: color 0.2s ease-in-out;
+}
+.icon-check {
+    color: #2ecc71;
+    font-size: 20px;
 }
 /*-- quantity-starts --*/
 .value-minus,
